environments/dev/apps/servicediscovery/resources/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicediscovery-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: servicediscovery
  template:
    metadata:
      labels:
        app: servicediscovery
    spec:
      containers:
      - name: servicediscovery-container
        image: acrcancendevopsworkshop.azurecr.io/service-discovery:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
        - name: sqlite-volume
          mountPath: /data
      volumes:
      - name: config-volume
        configMap:
          name: servicediscovery-config
      - name: sqlite-volume
        emptyDir: {}  # Temporary storage, data lost on pod restart
