environments/dev/apps/servicediscovery/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicediscovery-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: rg-cancen-devops-workshop  
  selector:
    app: servicediscovery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 130.107.129.97
