environments/dev/apps/servicediscovery/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicediscovery-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Optional: Force redirect HTTP to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - service.hemant.cloud
      secretName: servicediscovery-tls-new
  rules:
    - host: service.hemant.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicediscovery-service
                port:
                  number: 80
